# ais-bbm

./: Cargo.toml  README.md
data/: example1.txt
lib/: Cargo.toml
lib/src/: bits.rs  environmental.rs  inland_ship_voyage.rs  lib.rs  meteo_hydro.rs  utils.rs
tool/: Cargo.toml
tool/src/: main.rs
