[workspace]
resolver = "2"
members = ["lib","tool"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Berke DURAK <bd@exhrd.fr>"]
description = "AIS Binary Broadcast Message decoder"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/berke/ais-bbm"

[workspace.dependencies]
ais = "0.12.0"
anyhow = "1.0.102"
pico-args = "0.5.0"
fastrand = "2.3.0"

[workspace.dependencies.ais-bbm]
path = "lib"